deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: j-llm-ingress
  namespace: j-llm
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: j-llm-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/inbound-cidrs: '188.91.152.191/32'
spec:
  ingressClassName: alb
  rules:
  - host: chat.leazardlabs.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ollama-svc
            port:
              number: 11434
  - host: grafana.leazardlabs.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
